--- a/tournament-web-app/src/app/evaluationgrade-list/evaluationgrade-list.component.css
+++ b/tournament-web-app/src/app/evaluationgrade-list/evaluationgrade-list.component.css
@@ -3,7 +3,17 @@
     margin-bottom:auto;
     margin:5px;
 }
+
+
 mat-grid-list{
-    margin-left: 2em;
-    margin-right: 2em;
+    margin-bottom: 2em;
+    padding: 0px;
+
+}
+.evaluacion_name{
+    width:100%;
+    height:100%;
+    text-align: left; 
+    margin-left: 2em; 
+    vertical-align: middle;
 }
