--- a/tournament-web-app/src/app/program-list/program-list.component.html
+++ b/tournament-web-app/src/app/program-list/program-list.component.html
@@ -13,7 +13,7 @@
     <mat-expansion-panel [expanded]="false" hideToggle>
         <mat-expansion-panel-header>
         <mat-panel-title>
-            {{idx+1}}.-{{ p.performance.label }}
+            <span>{{idx+1}}.-{{ p.performance.label }}</span>
             @if( p.performance.isCanceled ){
                 <span class="cancel">Status Cancelado</span>
             }             
