--- a/tournament-web-app/src/app/welcome-juror/welcome-juror.component.css
+++ b/tournament-web-app/src/app/welcome-juror/welcome-juror.component.css
@@ -7,3 +7,10 @@
     margin-left: 1em;
     margin-right: 1em;
 }
+mat-grid-list{
+    margin-top: 0.5em;
+}
+.performance-label{
+    font-weight: bold;
+}
+
