remove por favor

--- a/tournament-web-app/src/app/admin-tournament-setup/admin-tournament-setup.component.html
+++ b/tournament-web-app/src/app/admin-tournament-setup/admin-tournament-setup.component.html
@@ -70,7 +70,7 @@
                         </mat-list-item>
                     }
                     @empty{
-                        <p>Usted necesita por lo menos una categoria; por favor adicione una</p>
+                        <p>Usted necesita por lo menos una categoria; adicione una</p>
                         <a [routerLink]="['categoryNew']">
                             <button mat-button-icon><mat-icon>add</mat-icon></button>
                         </a>       
@@ -97,7 +97,7 @@
                         </mat-list-item>    
                     } 
                     @empty{
-                        <p>Usted necesita por lo menos una evaluacion; por favor adicione una</p>
+                        <p>Usted necesita por lo menos una evaluacion; adicione una</p>
                         <a [routerLink]="['evaluationNew']">
                             <button mat-button-icon><mat-icon>add</mat-icon></button>
                         </a>       
@@ -122,7 +122,7 @@
                         </a>
                     }
                     @empty{
-                        <p>Usted necesita por lo menos un jurado; por favor adicione uno</p>
+                        <p>Usted necesita por lo menos un jurado; adicione uno</p>
                         <a [routerLink]="['jurorNew']">
                             <button mat-button-icon><mat-icon>add</mat-icon></button>
                         </a>       
@@ -147,7 +147,7 @@
                         </a>
                     }
                     @empty{
-                        <p>Usted necesita por lo menos un premio; por favor adicione uno</p>
+                        <p>Usted necesita por lo menos un premio; adicione uno</p>
                         <a [routerLink]="['medalNew']">
                             <button mat-button-icon><mat-icon>add</mat-icon></button>
                         </a>       
@@ -165,13 +165,14 @@
                     <h3>
                         Completado
                     </h3>
-                    por favor envie el siguiente link a sus bailarines para que registren sus bailes:
+                    Envie el siguiente link a sus bailarines para que registren sus bailes:
                     @if( tournamentId && tournament ){
                         <div class="tournament-url-container">
                             <span class="spacer"></span>
                             <span> 
                                 <h3 >{{ getTournamentPath() }}</h3>
                             </span>
+                            <button class="copy-content" mat-button-icon (click)="onCopyToClipboard()"><mat-icon>content_copy</mat-icon></button>
                             <span class="spacer"></span>
                         </div>
                     }                    
