--- a/tournament-web-app/src/app/evaluation-edit/evaluation-edit.component.html
+++ b/tournament-web-app/src/app/evaluation-edit/evaluation-edit.component.html
@@ -33,7 +33,7 @@
                     </a>
                 }
                 @empty{
-                    <span color="warn" class="error-message">Por favor adicione aspectos</span>
+                    <span color="warn" class="error-message">Adicione aspectos</span>
                     <a [routerLink]="['aspectNew']">
                         <button mat-button-icon><mat-icon>add</mat-icon></button>
                     </a>
