--- a/tournament-web-app/src/app/program-list/program-list.component.html
+++ b/tournament-web-app/src/app/program-list/program-list.component.html
@@ -23,7 +23,7 @@
 
 
             @if( p.noEvaluationsFound ){
-                <mat-chip ><span class="attention">Por favor adicione examenes!</span></mat-chip>
+                <mat-chip ><span class="attention">Adicione examenes!</span></mat-chip>
             }
             @if( p.performance.isReleased == false && p.newGradeAvailable ){
                 <mat-chip ><span class="attention">Nueva calificacion disponible!</span></mat-chip>
@@ -57,6 +57,6 @@
     </mat-expansion-panel>
     }
     @empty{
-        <span class="attention">Usted necesita aceptar solicitudes de presentacion en el programa</span>
+        <mat-chip><span class="attention">Usted necesita aceptar solicitudes de presentacion en el programa</span></mat-chip>
     }
 </mat-accordion>
