--- a/tournament-web-app/src/app/admin-tournament/admin-tournament.component.html
+++ b/tournament-web-app/src/app/admin-tournament/admin-tournament.component.html
@@ -10,9 +10,7 @@
     <h4>Envie este link a sus participantes para que registren solicitudes</h4>
     <div class="tournament-url-container">
         <span class="spacer"></span>
-        <span> 
-            <h3>{{ getTournamentPath() }}</h3>
-        </span>
+        <span>{{ getTournamentPath() }}</span>
         <button class="copy-content" mat-button-icon (click)="onCopyToClipboard()"><mat-icon>content_copy</mat-icon></button>
         <span class="spacer"></span>
     </div>  
