--- a/tournament-web-app/src/app/app.component.html
+++ b/tournament-web-app/src/app/app.component.html
@@ -3,7 +3,7 @@
     <button (click)="home()" mat-icon-button>
         <mat-icon>home</mat-icon>
     </button> 
-    <span>{{bussiness.home}}</span>
+    <!--<span>{{bussiness.home}}</span>-->
 
     <span class="spacer"></span> 
 
