--- a/tournament-web-app/src/app/admin-tournament/admin-tournament.component.css
+++ b/tournament-web-app/src/app/admin-tournament/admin-tournament.component.css
@@ -44,8 +44,9 @@ p{
 
 .tournament-url-container{
     background-color: lightblue;
-    padding: 15px;
+    padding: 2px;
     margin: 1em;
+    font-size: small;
     display:flex;
 }
 .cancelado{
