--- a/tournament-web-app/src/app/program-list/program-list.component.html
+++ b/tournament-web-app/src/app/program-list/program-list.component.html
@@ -57,6 +57,6 @@
     </mat-expansion-panel>
     }
     @empty{
-        <mat-chip><span class="attention">Usted necesita aceptar solicitudes de presentacion en el programa</span></mat-chip>
+        <mat-chip><span class="attention">Acepte solicitudes de coreografías</span></mat-chip>
     }
 </mat-accordion>
