removing bar from url

--- a/tournament-web-app/src/app/admin-tournament-setup/admin-tournament-setup.component.html
+++ b/tournament-web-app/src/app/admin-tournament-setup/admin-tournament-setup.component.html
@@ -168,10 +168,8 @@
                     Envie el siguiente link a sus bailarines para que registren sus bailes:
                     @if( tournamentId && tournament ){
                         <div class="tournament-url-container">
-                            <span class="spacer"></span>
-                            <span>{{ getTournamentPath() }}</span>
+                            <div>{{ getTournamentPath() }}</div>
                             <button class="copy-content" mat-button-icon (click)="onCopyToClipboard()"><mat-icon>content_copy</mat-icon></button>
-                            <span class="spacer"></span>
                         </div>
                     }                    
                 }
