--- a/tournament-web-app/src/app/admin-tournament/admin-tournament.component.html
+++ b/tournament-web-app/src/app/admin-tournament/admin-tournament.component.html
@@ -9,11 +9,9 @@
     </div>
     <h4>Envie este link a sus participantes para que registren solicitudes</h4>
     <div class="tournament-url-container">
-        <span class="spacer"></span>
-        <span>{{ getTournamentPath() }}</span>
+        <div>{{ getTournamentPath() }}</div>
         <button class="copy-content" mat-button-icon (click)="onCopyToClipboard()"><mat-icon>content_copy</mat-icon></button>
-        <span class="spacer"></span>
-    </div>  
+    </div> 
 }
 @else{
     <h1>Editar Torneo</h1>
